Create home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="header">
+    Média de salários
+  </div>
+  <div id="content">
+    <%= yield %>
+  </div>
+  <div id="footer">
+  </div>
 </body>
 </html>
