--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -3,5 +3,47 @@
   They will automatically be included in application.css.
 */
 body, h1, h2, h3{margin:0;padding:0;}
-body{background:url(bg.png);color:#fff;}
-h1{font-size:72px;text-align:center;text-shadow:2px 2px 2px #333;font-family:Georgia,serif;margin:10px;}
+
+body{background:url(bg.png);color:#fff;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
+h1, h2, h3{font-family:Georgia, serif;}
+h1{font-size:72px;text-align:center;text-shadow:2px 2px 2px #333;margin:10px;}
+h3{font-size:42px; padding:10px;text-shadow:1px 1px 1px #333;}
+
+label{display:inline-block;margin-left:15px;margin-right:5px;text-shadow:1px 1px 1px #333;}
+select, input{display: inline-block;width:150px;}
+select{height: 28px;line-height: 28px;font-size: 13px;border-radius: 4px;}
+
+input[type='text']{display: inline-block;width: 210px;height: 18px;padding: 4px;margin-bottom: 9px;font-size: 13px;line-height: 18px;color: #555;border: 1px solid #CCC;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;}
+
+button[type='submit']{display: inline-block;
+padding: 4px 10px 4px;
+/*margin-bottom: 0;*/
+font-size: 13px;
+line-height: 18px;
+color: #333;
+text-align: center;
+text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+vertical-align: middle;
+background-color: whiteSmoke;
+background-image: -moz-linear-gradient(top, white, #E6E6E6);
+background-image: -ms-linear-gradient(top, white, #E6E6E6);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
+background-image: -webkit-linear-gradient(top, white, #E6E6E6);
+background-image: -o-linear-gradient(top, white, #E6E6E6);
+background-image: linear-gradient(top, white, #E6E6E6);
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+border-color: #E6E6E6 #E6E6E6 #BFBFBF;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+border: 1px solid #CCC;
+border-bottom-color: #BBB;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+cursor: pointer;
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
