lidando com criação de salários

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
 <h3>Informe seu salário:</h3>
+<div id="errors" style="display:none;"></div>
+<div id="notice" style="display:none"></div>
+
 <%= render "form", salario: @salario %>
