--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for(salario,remote: true) do |f| %>
-	<%= label :city_state_id, "Estado" %>
-    <%= select :state, :name, @states.collect {|s| [ s.name, s.id ] }, {:prompt => 'Selecione Estado'}, class: "estados"  %>
+<%= form_for(salario, remote: true) do |f| %>
+	<%= label :city_state, "state" %>
+    <%= select :city_state,"state", @states.collect {|s| [ s.name, s.id ] }, {:prompt => 'Selecione Estado'}, class: "estados"  %>
 	<%= f.label :city, "Cidade" %>
-  	<%= f.select :city, salario.new_record? || !@salario.city ? [] : @salario.city.state.cities.collect{ |c| [c.name, c.id] }, {include_blank: true}, class: "cidades"%>
-	<label for="amount">Valor</label>
-	<input type="text"></input>
-	<button type="submit" value="Enviar">Enviar</button>
+  	<%= f.select :city_id, [], {:prompt => 'Selecione Estado antes'}, class: "cidades" %>
+	<%= f.label :amount, "Salário" %>
+	<%= f.text_field :amount %>
+	<%= f.button "Enviar", type: "submit" %>
 <% end %>
