--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -4,10 +4,14 @@
 */
 body, h1, h2, h3{margin:0;padding:0;}
 
-body{background:url(bg.png);color:#fff;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
-h1, h2, h3{font-family:Georgia, serif;}
-h1{font-size:72px;text-align:center;text-shadow:2px 2px 2px #333;margin:10px;}
-h3{font-size:42px; padding:10px;text-shadow:1px 1px 1px #333;}
+body{background:url(bg2.png);color:#fff;font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
+h1 {font-family:Georgia, serif;}
+h1{font-size:72px;text-align:center;text-shadow:2px 2px 2px #f1f2f3;margin:10px;color:#363636;}
+h3{font-size:22px; padding:10px;text-shadow:1px 1px 1px #333;}
+
+#content{
+	width:900px;margin:0 auto;
+}
 
 label{display:inline-block;margin-left:15px;margin-right:5px;text-shadow:1px 1px 1px #333;}
 select, input{display: inline-block;width:150px;}
@@ -45,4 +49,22 @@ border-radius: 4px;
 box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 cursor: pointer;
 filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+
+.alerts{
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	padding: 8px 35px 8px 14px;
+	margin-bottom:10px;
+}
+#errors{
+	background-color: #F2DEDE;
+	border-color: #EED3D7;
+	color: #B94A48;
+}
+#success{
+	background-color: #DFF0D8;
+	border-color: #D6E9C6;
+	color: #468847;
 }
