--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(salario, remote: true) do |f| %>
-	<%= label :city_state, "state" %>
+	<%= label :city_state, "Estado" %>
     <%= select :city_state,"state", @states.collect {|s| [ s.name, s.id ] }, {:prompt => 'Selecione Estado'}, class: "estados"  %>
 	<%= f.label :city, "Cidade" %>
   	<%= f.select :city_id, [], {:prompt => 'Selecione Estado antes'}, class: "cidades" %>
