--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Informe seu salário</h3>
+<h3>Colabore</h3>
 <div id="errors" class="alerts" style="display:none;"></div>
 <div id="success" class="alerts" style="display:none"></div>
 
