--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,16 @@
 </head>
 <body>
   <div id="header">
-    <h1>Rails Salary</h1>
+    <h1>Rails <span>$</span>alary</h1>
+    <h2>média de quanto é pago aos programadores Rails</h2>
+    <hr/>
   </div>
   <div id="content">
     <%= yield %>
   </div>
   <div id="footer">
   </div>
+<a href="http://github.com/vquaiato/Salary"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/abad93f42020b733148435e2cd92ce15c542d320/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
   <%= javascript_include_tag "application" %>
 </body>
 </html>
