--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Salarios</title>
+  <META NAME="DESCRIPTION" CONTENT="Rails Salary: an app to track the avarage salary of Rails programmers, uma aplicação para ver o salário médio pago aos programadores Rails">
+  <META NAME="KEYWORDS" CONTENT="rails, salary, rails salary, salário rails, salário ruby, salário programador rails, salário programador ruby">
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
