--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Salarios</title>
+  <title>Rails Salary - média de quanto é pago aos programadores Rails</title>
   <META NAME="DESCRIPTION" CONTENT="Rails Salary: an app to track the avarage salary of Rails programmers, uma aplicação para ver o salário médio pago aos programadores Rails">
   <META NAME="KEYWORDS" CONTENT="rails, salary, rails salary, salário rails, salário ruby, salário programador rails, salário programador ruby">
   <%= stylesheet_link_tag "application", :media => "all" %>
