--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -13,9 +13,9 @@ h3{font-size:22px; padding:10px;text-shadow:1px 1px 1px #f1f2f3;color:#363636;}
 
 label{display:inline-block;margin-left:15px;margin-right:5px;text-shadow:1px 1px 1px #333;}
 select, input{display: inline-block;width:150px;}
-select{height: 28px;line-height: 28px;font-size: 13px;border-radius: 4px;}
+select{height: 28px;line-height: 28px;font-size: 13px;border-radius: 4px;margin-right:280px;margin-bottom:10px;}
 
-input[type='text']{display: inline-block;width: 210px;height: 18px;padding: 4px;margin-bottom: 9px;font-size: 13px;line-height: 18px;color: #555;border: 1px solid #CCC;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;}
+input[type='text']{display: inline-block;width: 210px;height: 18px;padding: 4px;margin-bottom: 9px;font-size: 13px;line-height: 18px;color: #555;border: 1px solid #CCC;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;margin-right:280px;}
 
 button[type='submit']{display: inline-block;
 padding: 4px 10px 4px;
