--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -15,7 +15,7 @@ label{display:inline-block;margin-left:15px;margin-right:5px;text-shadow:1px 1px
 select, input{display: inline-block;width:150px;}
 select{height: 28px;line-height: 28px;font-size: 13px;border-radius: 4px;margin-right:280px;margin-bottom:10px;}
 
-input[type='text']{display: inline-block;width: 210px;height: 18px;padding: 4px;margin-bottom: 9px;font-size: 13px;line-height: 18px;color: #555;border: 1px solid #CCC;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;margin-right:280px;}
+input[type='text']{display: inline-block;width: 145px;height: 18px;padding: 4px;margin-bottom: 9px;font-size: 13px;line-height: 18px;color: #555;border: 1px solid #CCC;-webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;margin-right:280px;}
 
 button[type='submit']{display: inline-block;
 padding: 4px 10px 4px;
@@ -48,6 +48,8 @@ box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05
 cursor: pointer;
 filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
+#gotcha{background:#ddd;padding: 5px 0;height: 30px;margin-bottom:10px;}
+#gotcha input[type=text]{margin-right:150px;width:45px;}
 
 .alerts{
 	-webkit-border-radius: 4px;
