--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rails Salary - média de quanto é pago aos programadores Rails</title>
-  <META NAME="DESCRIPTION" CONTENT="Rails Salary: an app to track the avarage salary of Rails programmers, uma aplicação para ver o salário médio pago aos programadores Rails">
-  <META NAME="KEYWORDS" CONTENT="rails, salary, rails salary, salário rails, salário ruby, salário programador rails, salário programador ruby">
+  <title>Ruby Salary - média de quanto é pago aos programadores Ruby</title>
+  <META NAME="DESCRIPTION" CONTENT="Ruby Salary: an app to track the avarage salary of Ruby programmers, uma aplicação para ver o salário médio pago aos programadores Ruby">
+  <META NAME="KEYWORDS" CONTENT="ruby, salary, ruby salary, rails salary, salário ruby, salário rails, salário programador ruby, salário programador rails">
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
   <script type="text/javascript">
@@ -22,8 +22,8 @@
 </head>
 <body>
   <div id="header">
-    <h1>Rails <span>$</span>alary</h1>
-    <h2>média de quanto é pago aos programadores Rails</h2>
+    <h1>Ruby <span>$</span>alary</h1>
+    <h2>média de quanto é pago aos programadores Ruby</h2>
     <hr/>
   </div>
   <div id="content">
