--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,34 @@
 </script>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script language="javascript">
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=336658186385469";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
   <div id="header">
     <h1>Ruby <span>$</span>alary</h1>
     <h2>média de quanto é pago aos programadores Ruby</h2>
+    <div style="text-align:center;">
+    <div class="fb-like" data-href="http://ruby-salary.heroku.com" data-send="true" data-layout="button_count" data-width="150" data-show-faces="false" style="position: relative; top: -3px"></div>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="leandronet">Tweet</a>
+        <script language="javascript">
+            !function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//platform.twitter.com/widgets.js"; 
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            } (document, "script", "twitter-wjs");
+        </script>
+      </div>
     <hr/>
   </div>
   <div id="content">
@@ -32,6 +57,7 @@
   <div id="footer">
   </div>
 <a href="http://github.com/tapajos/Salary"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/abad93f42020b733148435e2cd92ce15c542d320/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
+
   <%= javascript_include_tag "application" %>
 </body>
 </html>
