corrigindo via no tweet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,14 +36,14 @@
     <h2>média de quanto é pago aos programadores Ruby</h2>
     <div style="text-align:center;">
     <div class="fb-like" data-href="http://ruby-salary.heroku.com" data-send="true" data-layout="button_count" data-width="150" data-show-faces="false" style="position: relative; top: -3px"></div>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-via="leandronet">Tweet</a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="vquaiato">Tweet</a>
         <script language="javascript">
             !function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (!d.getElementById(id)) {
                     js = d.createElement(s);
                     js.id = id;
-                    js.src = "//platform.twitter.com/widgets.js"; 
+                    js.src = "//platform.twitter.com/widgets.js";
                     fjs.parentNode.insertBefore(js, fjs);
                 }
             } (document, "script", "twitter-wjs");
